--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -1,5 +1,9 @@
 worker:
 	go build -buildmode=plugin ../mrapps/wc.go
-	go run ./mrworker.go wc.so
+	go run ./mrworker.go wc.so > output1 & 
+	go run ./mrworker.go wc.so > output2 & 
+	go run ./mrworker.go wc.so > output3 &
+	go run ./mrworker.go wc.so > output4 &
+
 co:
 	go run ./mrcoordinator.go wc.so pg-*.txt
